# apple-neon-prime8

./: .gitignore  BENCHMARK_RESULTS.md  CMakeLists.txt  FINAL_RESULTS.md  OPTIMIZATION_RESULTS.md  PERFORMANCE.md  PROJECT_STRUCTURE.md  README.md  bench.cpp  bench_interleaved  bench_main  bench_o3  bench_pgo_gen  bench_test  bench_working.cpp  build_pgo.sh  build_pgo_v2.sh  comprehensive_final  correctness.cpp  debug_test  debug_test.cpp  test_fixes.cpp
.github/workflows/: ci.yml
bench/: bench.cpp  bench_all.cpp  bench_block_sieve.cpp  bench_comparison.cpp  bench_final.cpp  bench_final_complete.cpp  bench_fixed.cpp  bench_gmpy2.py  bench_hybrid.py  bench_optimized.cpp  bench_pipeline.cpp  bench_pipeline_adaptive.cpp  bench_python.py  bench_ultra.cpp  bench_wheel.cpp  demo.cpp  hybrid_driver.cpp
build_pgo/: bench_instr  bench_pgo  code.profdata
build_pgo/profiles/: bench-4683-15781588052283246725_0.profraw
pgo_data/: default_15853720602089386117_0.profraw
src/: primes_tables.hpp  simd_fast.cpp  simd_fast.hpp  simd_final.cpp  simd_optimized.cpp  simd_ultra_fast.cpp  simd_wheel.cpp  simd_wheel210.cpp  simd_wheel210_efficient.cpp
test/: comprehensive_test.cpp  correctness.cpp  test_bitmap16.cpp  test_bitpack.cpp  test_debug_filter.cpp  test_filter_order.cpp  test_filter_primes.cpp  test_filter_simple.cpp  test_mod30.cpp  test_movemask_debug.cpp  test_movemask_fix.cpp  test_simple.cpp  test_ultra.cpp  test_wheel.cpp  test_wheel210.cpp
